crates/ai/tests/snapshots/tool_outputs_parity__output_get_asset_taxonomy_assignments_empty_query.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "err": "assetQuery is required"
}
