crates/ai/tests/snapshots/tool_outputs_parity__output_get_asset_taxonomy_assignments_inactive_asset.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "err": "Asset 'MSFT' was not found among active assets"
}
