crates/ai/tests/snapshots/tool_outputs_parity__output_get_asset_taxonomy_assignments_provider_suffix.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
assertion_line: 483
expression: result
---
{
  "ok": {
    "assetQuery": "SHOP.TO",
    "assignments": [],
    "resolvedAsset": {
      "assetId": "asset-shop",
      "currency": "USD",
      "displayCode": "SHOP",
      "exchangeMic": "XTSE",
      "instrumentType": "EQUITY",
      "label": "SHOP - Shopify Inc.",
      "matchedBy": "provider_suffix",
      "name": "Shopify Inc.",
      "symbol": "SHOP"
    }
  }
}
