crates/ai/tests/snapshots/tool_outputs_parity__output_get_asset_taxonomy_assignments_symbol_mic.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
assertion_line: 489
expression: result
---
{
  "ok": {
    "assetQuery": "VT XNAS",
    "assignments": [],
    "resolvedAsset": {
      "assetId": "asset-vt-xnas",
      "currency": "USD",
      "displayCode": "VT",
      "exchangeMic": "XNAS",
      "instrumentType": "EQUITY",
      "label": "VT - Vanguard Total World Stock Index Fund ETF Shares",
      "matchedBy": "symbol_exchange_mic",
      "name": "Vanguard Total World Stock Index Fund ETF Shares",
      "symbol": "VT"
    }
  }
}
