crates/ai/tests/snapshots/tool_outputs_parity__output_get_asset_taxonomy_assignments_unknown_taxonomy.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "err": "Taxonomy 'missing-tax' was not found or is not asset-scoped"
}
