crates/ai/tests/snapshots/tool_outputs_parity__output_get_cash_balances.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "accounts": [],
    "baseCurrency": "USD",
    "grandTotalBase": 0.0
  }
}
