crates/ai/tests/snapshots/tool_outputs_parity__output_get_health_status.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "isStale": false,
    "issues": [],
    "note": "No health check has run yet in this session. Ask the user to open the Health Center to run a check.",
    "overallSeverity": "NOT_COMPUTED"
  }
}
